--- a/style.css
+++ b/style.css
@@ -265,3 +265,794 @@ body {
   font-family: "Montserrat-bold";
   white-space: pre-line;
 }
+
+/********************* medias*******************************/
+
+/* media 390 */
+
+@media screen and (max-width: 390px) {
+
+  /************ aumentar textos na seçao 1 *********8*/
+  .texto1 {
+    text-align: center;
+    margin: 0.4vw;
+    font-size: 3.2vw;
+    color: #664a9f;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+
+  .texto2 {
+    text-align: center;
+    font-size: 3.5vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    line-height: 0.8;
+    margin-top: 1vw;
+
+  }
+
+  /******************* aumentar tamanho dos cards ************/
+
+  .texto3 {
+    font-size: 3vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    margin-top: 2vw;
+
+  }
+
+  .container_cards {
+    display: flex;
+    gap: 1.5vw;
+    width: 95vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2vw;
+  }
+
+  .card {
+    background-color: #664a9f;
+    padding: 0.8vw 0.8vw 1.57vw 0.8vw;
+    width: 29vw;
+    height: 18vw;
+    color: white;
+  }
+
+  .icon_card {
+    width: 12vw;
+    height: 12vw;
+    position: relative;
+    top: -1.5vw;
+    left: -5%;
+  }
+
+  .texto_card1 {
+    font-size: 1.9vw;
+    margin-top: -10vw;
+    margin-left: 9vw;
+    font-family: "Montserrat-black";
+    white-space: pre-line;
+  }
+
+  .texto_card2 {
+    font-family: "Montserrat-regular";
+    font-size: 1.9vw;
+    white-space: pre-line;
+    margin-top: 3vw;
+
+  }
+
+  .texto_card1Insta {
+    font-family: "Montserrat-black";
+    font-size: 1.5vw;
+    margin-left: 9vw;
+    margin-top: -10vw;
+    white-space: pre-line;
+  }
+
+  .texto_card2Insta {
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    font-size: 1.6vw;
+    margin-top: 3.2vw;
+    margin-left: 0vw;
+  }
+
+  /************************ aumentar botões seção4*****************/
+  .secao_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5vw;
+    gap: 0.5vw;
+    margin-bottom: 4vw;
+    margin-top: 6vw;
+  }
+
+  .texto4 {
+    color: #664a9f;
+    font-size: 3vw;
+    text-align: center;
+    margin-bottom: 1.5873vw;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+  }
+
+  .btn {
+    background-color: #664a9f;
+    color: white;
+    width: 40vw;
+    height: 10vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0px 0px 0px 6.2%;
+    border-radius: 4vw;
+    margin: 0.396827vw;
+  }
+
+  .btn_texto1 {
+    font-size: 2vw;
+    font-family: "Montserrat-regular";
+    margin-bottom: -2%;
+    margin-left: 1%;
+  }
+
+  .btn_texto2 {
+    font-size: 4vw;
+    font-family: "Montserrat-bold";
+  }
+
+  .btn_texto_alt1 {
+    line-height: 82%;
+    margin-top: 1.5%;
+    font-size: 4vw;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+}
+
+
+/************** Media 600 para celulares ***************/
+@media screen and (max-width: 600px) and (min-width: 390px) {
+
+  /************ aumentar textos na seçao 1 *********8*/
+  .texto1 {
+    text-align: center;
+    margin: 0.4vw;
+    font-size: 4vw;
+    color: #664a9f;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+
+  .texto2 {
+    text-align: center;
+    font-size: 4vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    line-height: 0.8;
+    margin-top: 1vw;
+
+  }
+
+  /******************* aumentar tamanho dos cards ************/
+
+  .texto3 {
+    font-size: 3.5vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    margin-top: 2vw;
+
+  }
+
+  .container_cards {
+    display: flex;
+    gap: 1.5vw;
+    width: 95vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2vw;
+  }
+
+  .card {
+    background-color: #664a9f;
+    padding: 0.8vw 0.8vw 1.57vw 0.8vw;
+    width: 29vw;
+    height: 18vw;
+    color: white;
+  }
+
+  .icon_card {
+    width: 12vw;
+    height: 12vw;
+    position: relative;
+    top: -1.5vw;
+    left: -5%;
+  }
+
+  .texto_card1 {
+    font-size: 1.9vw;
+    margin-top: -10vw;
+    margin-left: 9vw;
+    font-family: "Montserrat-black";
+    white-space: pre-line;
+  }
+
+  .texto_card2 {
+    font-family: "Montserrat-regular";
+    font-size: 1.9vw;
+    white-space: pre-line;
+    margin-top: 3vw;
+
+  }
+
+  .texto_card1Insta {
+    font-family: "Montserrat-black";
+    font-size: 1.5vw;
+    margin-left: 9vw;
+    margin-top: -10vw;
+    white-space: pre-line;
+  }
+
+  .texto_card2Insta {
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    font-size: 1.6vw;
+    margin-top: 3.2vw;
+    margin-left: 0vw;
+  }
+
+  /************************ aumentar botões seção4*****************/
+  .secao_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5vw;
+    gap: 0.5vw;
+    margin-bottom: 4vw;
+    margin-top: 6vw;
+  }
+
+  .texto4 {
+    color: #664a9f;
+    font-size: 3.3vw;
+    text-align: center;
+    margin-bottom: 1.5873vw;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+  }
+
+  .btn {
+    background-color: #664a9f;
+    color: white;
+    width: 35vw;
+    height: 13vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0px 0px 0px 6.2%;
+    border-radius: 5vw;
+    margin: 0.396827vw;
+  }
+
+  .btn_texto1 {
+    font-size: 2vw;
+    font-family: "Montserrat-regular";
+    margin-bottom: -2%;
+    margin-left: 1%;
+  }
+
+  .btn_texto2 {
+    font-size: 4.5vw;
+    font-family: "Montserrat-bold";
+  }
+
+  .btn_texto_alt1 {
+    line-height: 82%;
+    margin-top: 1.5%;
+    font-size: 4vw;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+}
+
+/* Media para tamanho de tablet */
+@media (min-width: 600px) and (max-width: 768px) {
+
+  /************ aumentar textos na seçao 1 *********8*/
+  .texto1 {
+    text-align: center;
+    margin: 0.4vw;
+    font-size: 4vw;
+    color: #664a9f;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+
+  .texto2 {
+    text-align: center;
+    font-size: 4vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    line-height: 0.8;
+    margin-top: 1vw;
+
+  }
+
+  /******************* aumentar tamanho dos cards ************/
+
+  .texto3 {
+    font-size: 3.5vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    margin-top: 2vw;
+
+  }
+
+  .container_cards {
+    display: flex;
+    gap: 1.5vw;
+    width: 95vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2vw;
+  }
+
+  .card {
+    background-color: #664a9f;
+    padding: 0.8vw 0.8vw 1.57vw 0.8vw;
+    width: 29vw;
+    height: 18vw;
+    color: white;
+  }
+
+  .icon_card {
+    width: 12vw;
+    height: 12vw;
+    position: relative;
+    top: -1.5vw;
+    left: -5%;
+  }
+
+  .texto_card1 {
+    font-size: 1.9vw;
+    margin-top: -10vw;
+    margin-left: 9vw;
+    font-family: "Montserrat-black";
+    white-space: pre-line;
+  }
+
+  .texto_card2 {
+    font-family: "Montserrat-regular";
+    font-size: 1.9vw;
+    white-space: pre-line;
+    margin-top: 3vw;
+
+  }
+
+  .texto_card1Insta {
+    font-family: "Montserrat-black";
+    font-size: 1.5vw;
+    margin-left: 9vw;
+    margin-top: -10vw;
+    white-space: pre-line;
+  }
+
+  .texto_card2Insta {
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    font-size: 1.6vw;
+    margin-top: 3.2vw;
+    margin-left: 0vw;
+  }
+
+  /************************ aumentar botões seção4*****************/
+  .secao_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5vw;
+    gap: 0.5vw;
+    margin-bottom: 4vw;
+    margin-top: 6vw;
+  }
+
+  .texto4 {
+    color: #664a9f;
+    font-size: 3.3vw;
+    text-align: center;
+    margin-bottom: 1.5873vw;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+  }
+
+  .btn {
+    background-color: #664a9f;
+    color: white;
+    width: 35vw;
+    height: 13vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0px 0px 0px 6.2%;
+    border-radius: 5vw;
+    margin: 0.396827vw;
+  }
+
+  .btn_texto1 {
+    font-size: 2vw;
+    font-family: "Montserrat-regular";
+    margin-bottom: -2%;
+    margin-left: 1%;
+  }
+
+  .btn_texto2 {
+    font-size: 4.5vw;
+    font-family: "Montserrat-bold";
+  }
+
+  .btn_texto_alt1 {
+    line-height: 82%;
+    margin-top: 1.5%;
+    font-size: 4vw;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 992px) {
+
+  /************ aumentar textos na seçao 1 *********8*/
+  .texto1 {
+    text-align: center;
+    margin: 0.4vw;
+    font-size: 4vw;
+    color: #664a9f;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+
+  .texto2 {
+    text-align: center;
+    font-size: 4vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    line-height: 0.8;
+    margin-top: 1vw;
+
+  }
+
+  /******************* aumentar tamanho dos cards ************/
+
+  .texto3 {
+    font-size: 3.5vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    margin-top: 2vw;
+
+  }
+
+  .container_cards {
+    display: flex;
+    gap: 1.5vw;
+    width: 95vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2vw;
+  }
+
+  .card {
+    background-color: #664a9f;
+    padding: 0.8vw 0.8vw 1.57vw 0.8vw;
+    width: 29vw;
+    height: 18vw;
+    color: white;
+  }
+
+  .icon_card {
+    width: 12vw;
+    height: 12vw;
+    position: relative;
+    top: -1.5vw;
+    left: -5%;
+  }
+
+  .texto_card1 {
+    font-size: 1.9vw;
+    margin-top: -10vw;
+    margin-left: 9vw;
+    font-family: "Montserrat-black";
+    white-space: pre-line;
+  }
+
+  .texto_card2 {
+    font-family: "Montserrat-regular";
+    font-size: 1.9vw;
+    white-space: pre-line;
+    margin-top: 3vw;
+
+  }
+
+  .texto_card1Insta {
+    font-family: "Montserrat-black";
+    font-size: 1.5vw;
+    margin-left: 9vw;
+    margin-top: -10vw;
+    white-space: pre-line;
+  }
+
+  .texto_card2Insta {
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    font-size: 1.6vw;
+    margin-top: 3.2vw;
+    margin-left: 0vw;
+  }
+
+  /************************ aumentar botões seção4*****************/
+  .secao_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5vw;
+    gap: 0.5vw;
+    margin-bottom: 4vw;
+    margin-top: 6vw;
+  }
+
+  .texto4 {
+    color: #664a9f;
+    font-size: 3.3vw;
+    text-align: center;
+    margin-bottom: 1.5873vw;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+  }
+
+  .btn {
+    background-color: #664a9f;
+    color: white;
+    width: 35vw;
+    height: 13vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0px 0px 0px 6.2%;
+    border-radius: 5vw;
+    margin: 0.396827vw;
+  }
+
+  .btn_texto1 {
+    font-size: 2vw;
+    font-family: "Montserrat-regular";
+    margin-bottom: -2%;
+    margin-left: 1%;
+  }
+
+  .btn_texto2 {
+    font-size: 4.5vw;
+    font-family: "Montserrat-bold";
+  }
+
+  .btn_texto_alt1 {
+    line-height: 82%;
+    margin-top: 1.5%;
+    font-size: 4vw;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {
+
+  /************ aumentar textos na seçao 1 *********8*/
+  .texto1 {
+    text-align: center;
+    margin: 0.4vw;
+    font-size: 2.3vw;
+    color: #664a9f;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+
+  .texto2 {
+    text-align: center;
+    font-size: 2.6vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    line-height: 0.8;
+  }
+
+  /******************* aumentar tamanho dos cards ************/
+
+  .texto3 {
+    font-size: 3.5vw;
+    color: #664a9f;
+    font-family: "Montserrat-regular";
+    margin-top: 2vw;
+
+  }
+
+  .container_cards {
+    display: flex;
+    gap: 1.5vw;
+    width: 95vw;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 2vw;
+  }
+
+  .card {
+    background-color: #664a9f;
+    padding: 0.8vw 0.8vw 1.57vw 0.8vw;
+    width: 29vw;
+    height: 18vw;
+    color: white;
+  }
+
+  .icon_card {
+    width: 12vw;
+    height: 12vw;
+    position: relative;
+    top: -1.5vw;
+    left: -5%;
+  }
+
+  .texto_card1 {
+    font-size: 1.9vw;
+    margin-top: -10vw;
+    margin-left: 9vw;
+    font-family: "Montserrat-black";
+    white-space: pre-line;
+  }
+
+  .texto_card2 {
+    font-family: "Montserrat-regular";
+    font-size: 1.9vw;
+    white-space: pre-line;
+    margin-top: 3vw;
+
+  }
+
+  .texto_card1Insta {
+    font-family: "Montserrat-black";
+    font-size: 1.5vw;
+    margin-left: 9vw;
+    margin-top: -10vw;
+    white-space: pre-line;
+  }
+
+  .texto_card2Insta {
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    font-size: 1.6vw;
+    margin-top: 3.2vw;
+    margin-left: 0vw;
+  }
+
+  /************************ aumentar botões seção4*****************/
+  .secao_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5vw;
+    gap: 0.5vw;
+    margin-bottom: 4vw;
+    margin-top: 6vw;
+  }
+
+  .texto4 {
+    color: #664a9f;
+    font-size: 3.3vw;
+    text-align: center;
+    margin-bottom: 1.5873vw;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+  }
+
+  .btn {
+    background-color: #664a9f;
+    color: white;
+    width: 50vw;
+    height: 13vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0px 0px 0px 6.2%;
+    border-radius: 5vw;
+    margin: 0.396827vw;
+  }
+
+  .btn_texto1 {
+    font-size: 2vw;
+    font-family: "Montserrat-regular";
+    margin-bottom: -2%;
+    margin-left: 1%;
+  }
+
+  .btn_texto2 {
+    font-size: 4.5vw;
+    font-family: "Montserrat-bold";
+  }
+
+  .btn_texto_alt1 {
+    line-height: 82%;
+    margin-top: 1.5%;
+    font-size: 4vw;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1920px) {
+
+
+  /************************ aumentar botões seção4*****************/
+  .secao_footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1.5vw;
+    gap: 0.5vw;
+    margin-bottom: 4vw;
+    margin-top: 6vw;
+  }
+
+  .texto4 {
+    color: #664a9f;
+    font-size: 3.3vw;
+    text-align: center;
+    margin-bottom: 1.5873vw;
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+  }
+
+  .btn {
+    background-color: #664a9f;
+    color: white;
+    width: 30vw;
+    height: 8vw;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 0px 0px 0px 6.2%;
+    border-radius: 5vw;
+    margin: 0.396827vw;
+  }
+
+  .btn_texto1 {
+    font-size: 1vw;
+    font-family: "Montserrat-regular";
+    margin-bottom: -2%;
+    margin-left: 1%;
+  }
+
+  .btn_texto2 {
+    font-size: 2.5vw;
+    font-family: "Montserrat-bold";
+  }
+
+  .btn_texto_alt1 {
+    line-height: 82%;
+    margin-top: 1.5%;
+    font-size: 2.5vw;
+    font-family: "Montserrat-bold";
+    white-space: pre-line;
+  }
+
+
+}
