--- a/style.css
+++ b/style.css
@@ -1054,5 +1054,12 @@ body {
     white-space: pre-line;
   }
 
+  .texto_card2Insta {
+    font-family: "Montserrat-regular";
+    white-space: pre-line;
+    font-size: 1.2vw;
+    margin-top: 3vw;
+    margin-left: vw;
+  }
 
 }
