--- a/style.css
+++ b/style.css
@@ -1059,7 +1059,7 @@ body {
     white-space: pre-line;
     font-size: 1.2vw;
     margin-top: 3vw;
-    margin-left: vw;
+    margin-left: 0vw;
   }
 
 }
