--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
  /* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
 
 :root {
-  --fonte1: 'Montserrat 900', sans-serif;
+ --fonte1: 'Montserrat 900', sans-serif;
 } */
 
  @font-face {
@@ -352,20 +352,28 @@
    }
 
    .texto_card1 {
-     font-size: 2.5vw;
+     font-size: 2.8vw;
      margin-top: -10vw;
-     margin-left: 8vw;
+     /* margin-left: 8vw; */
      font-family: "Montserrat-black";
+     text-align: center;
+   }
+
+   .texto_card1Insta {
+     font-family: "Montserrat-black";
+     font-size: 2.7vw;
+     margin-left: 8vw;
+     margin-top: -10vw;
      white-space: pre-line;
    }
 
    .texto_card2 {
      font-family: "Montserrat-regular";
-     font-size: 3vw;
+     font-size: 2.8vw;
      padding: 5px;
-     margin-top: 2vw;
+     margin-top: 3vw;
      text-align: justify;
-     letter-spacing: -0.5px;
+     letter-spacing: -0.82px;
      word-break: break-word;
    }
 
@@ -392,23 +400,16 @@
 
    .texto_card2-4 {
      font-family: "Montserrat-regular";
-     font-size: 2.8vw;
+     font-size: 2.6vw;
      padding: 5px;
      margin-top: 2vw;
      text-align: justify;
      letter-spacing: -0.6px;
      word-break: break-word;
-
    }
 
 
-   .texto_card1Insta {
-     font-family: "Montserrat-black";
-     font-size: 2.3vw;
-     margin-left: 8vw;
-     margin-top: -10vw;
-     white-space: pre-line;
-   }
+
 
    .texto_card2Insta {
      font-family: "Montserrat-regular";
